	* A dedicated server binary, on Windows as well as Linux...
	* Implemented localisation into the game
		* The language is controlled by the language cvar
		* Strings are loaded from text\<language->value>\strings.txt (max 1024 strings, 64 key length and 512 key value)
		* They are referred to using the syntax [STRING_KEY] in code
	* Made the engine game-agnostic
		* Changed references to Zombono to the value of the name field of the gameinfo_t structure

BUG FIXES:
	* Fixed the game crashing on minimise
		* Don't try and render if resolution width or height are zero
	* Fixed updater (TODO BEFORE RELEASE: TEST)
	* Fixed font list not being loaded from pak file

REMOVALS:
	* Obsolete Windows-only code
	* Increased MAX_GLTEXTURES from 1024 to 2048

OTHER CHANGES:
	* Made update prompt game-agnostic

* NOTE: con_line_length only has any effect on dedicated servers

Version 0.1.0-pre1 (Build 659)
June 29, 2024

NEW FEATURES:
	* Early version of new map - Hellspire
	* The way that game assets get loaded has changed!
		* The game name and asset path are now loaded from the gameinfo.json file instead of being hardcoded by default
		* You can still use +set game <name> (or the equivalent alias of +set game_asset_path <name>) to change the name of the game
	* Made many more physics parameters tunable CVars:
		* This adds the following CVars:
			* sv_friction
			* sv_waterfriction
			* sv_maxspeed_director
			* sv_maxspeed_player
			* sv_accelerate_director
			* sv_accelerate_player
			* sv_duckspeed
			* sv_accelerate
			* sv_wateraccelerate
			* sv_friction - default value of 6
			* sv_waterfriction - default value of 1
			* sv_stopspeed - default value of 100
	* Director players now drop their items when they die, but, unlike regular items, they despawn after 10 seconds instead of 30.
	* UIs are now stackable:
		* If a UI has its "stackable" field set using the UI_SetStackable function with the stackable parameter set to "true", the UI will enter into a stack.